[package]
name = "nautilus-enclave"
version = "0.1.0"
edition = "2021"
description = "Enclave crypto and attestation primitives for AWS Nitro Enclaves"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
aws-nitro-enclaves-nsm-api = { version = "0.4", optional = true }

[features]
nsm = ["aws-nitro-enclaves-nsm-api"]
